add length changing input control to the tables
add übersicht gesamt to archive

add comment and update documentation

--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Archiv.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Archiv.cshtml
@@ -255,7 +255,7 @@
 
                 var table = $('#myTable').DataTable(
                     {
-                        dom: 'Bfrtip',
+                        dom: 'Bfrtlip',
                         buttons: [
                             {
                                 extend: 'copyHtml5',
