--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/ArchivMontage.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/ArchivMontage.cshtml
@@ -246,7 +246,7 @@
 
                 var table = $('#myTable').DataTable(
                     {
-                        dom: 'Bfrtip',
+                        dom: 'Bfrtlip',
                         buttons: [
                             {
                                 extend: 'copyHtml5',
