--- a/ZeiterfassungPierburg/Views/Mitarbeiter/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Mitarbeiter/Index.cshtml
@@ -37,6 +37,9 @@
                                 @Html.DisplayNameFor(model => model.istAktiv)
                             </th>
                             <th>
+                                Übersicht
+                            </th>
+                            <th>
                                 Aktionen
                             </th>
                         </tr>
@@ -69,17 +72,19 @@
                                 <td>
                                     @Html.DisplayFor(modelItem => item.istAktiv)
                                 </td>
-                                <td>
-                                    @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
-                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
+                                <td style="text-align:center">
+                                    @Html.ActionLink("Einträge", "Details", new { id = item.ID })
 
-                                    @if (Convert.ToInt32(Session["AccessLayer"]) == 1)
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID })
+
+                                    @if (Convert.ToInt32(Session["AccessLayer"]) == 3)
                                     {<text>
                                             | <a href="~/Produktivität?ProduktionsanlageID=0&FertigungsteilID=0&MitarbeiterID=@item.ID&Art=0&Produktivität=0&Day=0&Month=0&Year=0&FertigungteilList=System.Linq.Enumerable%2BWhereSelectEnumerableIterator%602%5BSystem.Collections.Generic.KeyValuePair%602%5BSystem.Int32%2CSystem.String%5D%2CSystem.Web.Mvc.SelectListItem%5D&MitarbeiterList=System.Linq.Enumerable%2BWhereSelectEnumerableIterator%602%5BSystem.Collections.Generic.KeyValuePair%602%5BSystem.Int32%2CSystem.String%5D%2CSystem.Web.Mvc.SelectListItem%5D&ProduktionsanlageList=System.Linq.Enumerable%2BWhereSelectEnumerableIterator%602%5BSystem.Collections.Generic.KeyValuePair%602%5BSystem.Int32%2CSystem.String%5D%2CSystem.Web.Mvc.SelectListItem%5D&MonthList=System.Collections.Generic.List%601%5BSystem.Web.Mvc.SelectListItem%5D&DayList=System.Collections.Generic.List%601%5BSystem.Web.Mvc.SelectListItem%5D&ArtList=System.Collections.Generic.List%601%5BSystem.Web.Mvc.SelectListItem%5D">Produktivität</a>
                                     </text>
-
                                 }
-                                    | @Html.ActionLink("Einträge", "Details", new { id = item.ID })
+                                    | @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
 
                                 </td>
                             </tr>
