--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/ArchivMeBa.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/ArchivMeBa.cshtml
@@ -247,7 +247,7 @@
 
                 var table = $('#myTable').DataTable(
                     {
-                        dom: 'Bfrtip',
+                        dom: 'Bfrtlip',
                         buttons: [
                             {
                                 extend: 'copyHtml5',
