--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
@@ -2,9 +2,6 @@
 
 @Styles.Render("~/bundles/tablePluginStyleBundle")
 
-
-
-
 <title>
     @ViewBag.Title
 </title>
@@ -14,10 +11,9 @@
             <div class="box-header with-border">
                 <h3>Übersicht der Mitarbeiter in Schichten in MeBa im letzten Monat</h3>
                 <h4>
-                    Für ältere Einträge besuche das @Html.ActionLink("Archiv", "ArchivMeBa", "MitarbeiterInSchicht").                 
+                    Für ältere Einträge besuche das @Html.ActionLink("Archiv", "ArchivMeBa", "MitarbeiterInSchicht").
                 </h4>
-
-
+                
                 <div class="row row-list" style="padding-bottom: 25px; padding-top: 15px">
                     <div class="col-xs-2">
                         <label>Einträge von:</label>
@@ -87,7 +83,7 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Auswertung)
                             </th>
-                                -->
+                             -->
 
                             <th>
                                 @Html.DisplayNameFor(model => model.IstInSAPEingetragen)
@@ -101,7 +97,7 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr value="@item.ID" , id="row+@item.ID">
+                            <tr value="@item.ID">
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Datum)
                                 </td>
@@ -145,19 +141,19 @@
                                     <input type="checkbox" href="#" id="eintragen_@item.ID" name="eintragen" value="@item.ID" style="height: 15px; width: 100%; margin: auto;">
                                 </td>
                                 <!--
-                                    <td>
+                                <td>
                                     @Html.DisplayFor(modelItem => item.Auswertung)%
                                 </td>
-                                    -->
+                                -->
                                 <td>
 
                                     <a href="~/MitarbeiterInSchicht/Edit/@item.ID"><span style="color:dimgrey" class="glyphicon glyphicon-edit"></span></a>
 
                                     |
                                     <!--   @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })-->
-                                    <a href="~/MitarbeiterInSchicht/Delete/@item.ID" onclick="return confirm('Wirklich löschen?'); "><span style="color:dimgrey"  class="glyphicon glyphicon-remove"></span></a>
+                                    <a href="~/MitarbeiterInSchicht/Delete/@item.ID" onclick="return confirm('Wirklich löschen?'); "><span style="color:dimgrey" class="glyphicon glyphicon-remove"></span></a>
 
-                                    <a id="@item.ID" hidden>@item.IstInSAPEingetragen</a> <!-- keep value of istINSAPEingetragen becaue the boolen value can't be passed as attribute (dunno why)-->
+                                    <a id="@item.ID" hidden>@item.IstInSAPEingetragen</a> <!-- keep value of istINSAPEingetragen because the boolen value can't be passed as attribute (dunno why)-->
                                 </td>
                             </tr>
                         }
@@ -172,18 +168,11 @@
         </div>
     </div>
 </section>
-<iframe id="txtArea1" style="display: none"></iframe>
-
-
 
 @section scripts{
 
-
-
     @Scripts.Render("~/bundles/tableScriptBundle")
     @Scripts.Render("~/bundles/dataTablesPlugins")
-
-
 
     <script>
 
@@ -197,8 +186,6 @@
         console.log(today);
         $('#max').val(today); //set filter date to today
 
- 
-
         now.setMonth(now.getMonth() - 1);
         day = ("0" + now.getDate()).slice(-2);
         month = ("0" + (now.getMonth() + 1)).slice(-2);
@@ -206,35 +193,31 @@
         today = now.getFullYear() + "-" + (month) + "-" + (day);
         $('#min').val(today); //set filter date to one month prior
 
-
-
         jQuery.fn.dataTableExt.afnFiltering.push(
             function (oSettings, aData, iDataIndex) {
-                var iColumn = 0;
+                var dateColumn = 0;
                 var schichtColumn = 1;
                 var anlageColumn = 2; //which column
 
                 var iMin = Date.parse(document.getElementById('min').value);
                 var iMax = Date.parse(document.getElementById('max').value);
 
-                var iVersion = (aData[iColumn] == "-" ? 0 : aData[iColumn]);
-                iVersion = Date.parse(iVersion);
+                var iDate = (aData[dateColumn] == "-" ? 0 : aData[dateColumn]);
+                iDate = Date.parse(iDate); //date
 
                 var schichtColumn = (aData[schichtColumn] == "-" ? 0 : aData[schichtColumn]) * 1;
-                var schicht = $(document.getElementById('schicht')).children("option:selected").val();
-
+                var schicht = $(document.getElementById('schicht')).children("option:selected").val(); //selected schicht
 
                 var anlageColumn = (aData[anlageColumn] == "-" ? 0 : aData[anlageColumn]);
-                var anlage = $(document.getElementById('anlageFilter')).children("option:selected").val();
+                var anlage = $(document.getElementById('anlageFilter')).children("option:selected").val(); // selected Machine/Band
 
-                if ((iMin > iVersion || iVersion > iMax) || (schicht != schichtColumn && schicht != "") || (anlage != anlageColumn && anlage != "")) {
+                if ((iMin > iDate || iDate > iMax) || (schicht != schichtColumn && schicht != "") || (anlage != anlageColumn && anlage != "")) {
 
-                    return false;
+                    return false; //don't render these rows if selected and now meeting the criteriea
                 }
                 else return true;
             }
         )
-
 
             var table = document.getElementById('myTable');
 
@@ -247,32 +230,26 @@
 
                 if (boolValue == 'True') {
                     $("#eintragen_" + id).prop("checked", true);
-                    $(row).css("background-color", "#90ee90");
+                    $(row).css("background-color", "#90ee90"); //green
                 }
                 if (boolValue == 'False') {
                     $("#eintragen_" + id).prop("checked", false)
 
-                    $(row).css("background-color", "#ffcccb");
+                    $(row).css("background-color", "#ffcccb"); //red
                 }
             }
 
-
             $(document).ready(function () {
-
-                //console.log(document.getElementById('min').value);
-                //document.getElementById('min').value = '15-Jan-2020';
-
 
                 var table = $('#myTable').DataTable(
                     {
-                        dom: 'Bfrtip',
+                        dom: 'Bfrtlip',
                         buttons: [
                             {
                                 extend: 'copyHtml5',
-                                text: '<i class="fa fa-files-o"></i>',
-                                text: '<span><img height="40" width="40" src="../Content/dist/img/icon_copy.png"/></span>',
+                                text: '<span><img height="40" width="40" src="../Content/dist/img/icon_copy.png"/></span>', //load image
                                 exportOptions: {
-                                    columns: [0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11]
+                                    columns: [0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11] //columns to be exported
                                 }
                             },
                             {
@@ -296,7 +273,6 @@
                                     columns: [0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11]
                                 }
                             }
-
                         ]
                     });
 
@@ -305,17 +281,12 @@
                 });
         });
 
-
-
-
-
              var url = '@Url.Action("Eintragen", "MitarbeiterInSchicht")';
 
                 $('[id^=eintragen_]').click(function () {
 
                     var id = $(this).attr('value'); // get ID
                     var boolValue = $('#' + id).text(); //get bool value
-
                     var row = $(this).closest("tr");
 
                     //console.log(boolValue);
@@ -323,7 +294,7 @@
                     $.getJSON(url, { istEingetragen: boolValue, id: id }, function (response) {
 
                         if (response == 0) {
-                            alert('Das lief schief. Aktualisiere die Seite und versuhce es erneut.')
+                            alert('Das lief schief. Aktualisiere die Seite und versuche es erneut.')
                         }
                     });
 
@@ -334,14 +305,8 @@
                     else if (boolValue == 'False') {
                         $(row).css("background-color", "#90ee90");
                         $('#' + id).text('True');
-
-
                     }
             });
-
-
-
     </script>
 
 }
-
