--- a/ZeiterfassungPierburg/Views/NeueZeiterfassung/CreateMEBA.cshtml
+++ b/ZeiterfassungPierburg/Views/NeueZeiterfassung/CreateMEBA.cshtml
@@ -9,7 +9,7 @@
 {
     @Html.AntiForgeryToken()
     <section class="content container-fluid">
-        <div class="box box-info">
+        <div class="box">
 
             <div class="box-body">
                 <h2>Neue Zeiterfassung - MEBA</h2>
