--- a/ZeiterfassungPierburg/Views/TeileInProduktionsanlage/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/TeileInProduktionsanlage/Create.cshtml
@@ -5,7 +5,7 @@
 {
     @Html.AntiForgeryToken()
     <section class="content container-fluid">
-        <div class="box box-info">
+        <div class="box">
             <div class="box-body">
                 <h3>Teile zu einer Produktionsanlage hinzufügen</h3>
 
