--- a/ZeiterfassungPierburg/Views/Zugriffsrechte/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Zugriffsrechte/Index.cshtml
@@ -8,7 +8,7 @@ else
 {
     <section class="content container-fluid">
         <div class="box-header with-border">
-            <div class="box box-info">
+            <div class="box">
                 <div class="box-header with-border">
                     <h3>Übersicht der Zugriffsrechte</h3>
                     <h5 style=" color:red">Hinweis: Wenn du deine Rechte löschst, kannst du sie dir selber nicht mehr zuteilen.</h5>
