--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
@@ -2,7 +2,7 @@
 
 <section class="content container-fluid">
     <div class="box-header with-border">
-        <div class="box box-info">
+        <div class="box">
             <div class="box-header with-border">
                 <h3>Übersicht der Teile</h3>
                 <table id="example" class="table table-striped table-bordered" style="width:100%">
