--- a/ZeiterfassungPierburg/Views/Mitarbeiter/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Mitarbeiter/Index.cshtml
@@ -6,7 +6,7 @@
 
 <section class="content container-fluid">
     <div class="box-header with-border">
-        <div class="box box-info">
+        <div class="box">
             <div class="box-header with-border">
                 <h3>Übersicht der Mitarbeiter*innen</h3>
                 <table id="example" class="table table-striped table-bordered" style="width:100%">
