--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
@@ -7,7 +7,7 @@
 </title>
 <section class="content container-fluid">
     <div class="box-header with-border">
-        <div class="box box-info">
+        <div class="box">
             <div class="box-header with-border">
                 <h3>Übersicht der Mitarbeiter in Schichten in der Montage im letzten Monat</h3>
                 <h4>
