--- a/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
@@ -10,7 +10,7 @@
 {
     @Html.AntiForgeryToken()
     <section class="content container-fluid">
-        <div class="box box-info">
+        <div class="box">
 
             <div class="box-body">
                 <h2>Neue Zeiterfassung - Montage</h2>
