--- a/ZeiterfassungPierburg/Views/Produktionsanlage/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktionsanlage/Index.cshtml
@@ -3,7 +3,7 @@
 
 <section class="content container-fluid">
     <div class="box-header with-border">
-        <div class="box box-info">
+        <div class="box">
             <div class="box-header with-border">
                 <h3>Übersicht der Produktionsanlagen</h3>
                 <table id="example" class="table table-striped table-bordered" style="width:100%">
