--- a/ZeiterfassungPierburg/Views/Produktivität/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktivität/Index.cshtml
@@ -8,13 +8,12 @@ else
 {
     <section class="content container-fluid">
         <div class="box-header with-border">
-            <div class="box box-info">
+            <div class="box">
                 <div class="box-header with-border">
                     <h3>Übersicht der Produktivität</h3>
 
                     <h5>
                         Benutzte Filter: <span class="label label-warning"> @ViewBag.Message </span>
-
                     </h5>
                     <div class="row">
                         <div class="col-lg-6 col-xs-6">
