--- a/ZeiterfassungPierburg/Content/TextAnimation.css
+++ b/ZeiterfassungPierburg/Content/TextAnimation.css
@@ -3,6 +3,46 @@
     display: inline-block;
 }
 
+.typewriter {
+    font-family: Arial, monospace;
+    display: inline-block;
+}
+
+.typewriter-text {
+    display: inline-block;
+    overflow: hidden;
+    letter-spacing: 2px;
+    animation: typing 3s steps(130, end), blink .50s step-end infinite;
+    white-space: nowrap;
+    font-size: 30px;
+    font-weight: 700;
+    border-right: 4px solid orange;
+    box-sizing: border-box;
+}
+
+@keyframes typing {
+    from {
+        width: 0%
+    }
+
+    to {
+        width: 100%
+    }
+}
+
+@keyframes blink {
+    from, to {
+        border-color: transparent
+    }
+
+    50% {
+        border-color: transparent;
+    }
+}
+
+
+
+/*
 .typewriter-text {
     display: inline-block;
     overflow: hidden;
@@ -34,3 +74,4 @@
         border-color: orange;
     }
 }
+    */
