--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Create.cshtml
@@ -43,6 +43,13 @@
                             @Html.ValidationMessageFor(model => model.AnzahlMA, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.IstAktiv, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-8">
+                            @Html.CheckBoxFor(model => model.IstAktiv, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.IstAktiv, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-8">
